@@ -1,5 +1,12 @@
 2011-03-21  Ramon Casero  <ramon.casero@comlab.ox.ac.uk>
 
+	* Rename CardiacToolbox/scinrrd_valve_surface.m as
+	PointsToolbox/scinrrd_surface_interpolation.
+
+	- As this is a function for general surface interpolation, it
+	doesn't make much sense to give it such an specific name as
+	"vale_surface".
+
 	* README
 
 	- First time the README file is automatically generated by
